--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">HungryMe</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="joke">Joke</string>
+    <string name="favourites">Favourites</string>
+    <string name="recipe">Recipe</string>
+    <string name="recipe_fragment">Recipe Fragment</string>
 </resources>
