--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="favourites">Favourites</string>
     <string name="recipe">Recipe</string>
     <string name="recipe_fragment">Recipe Fragment</string>
+    <string name="no_internet_connection">No Internet Connection!!</string>
+    <string name="network_error_msg_desc">This image will be shown in case of a network error</string>
 </resources>
